--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
      <div>
-       <h1>ANNA PHAM</h1>
-       <h2>Software Developer</h2>
+       <h1 id="header">ANNA PHAM</h1>
+       <h2 id="header">Software Developer</h2>
        <hr>
        <p>My <i>favorite</i> thing about programming is that I can make cool websites, like this one!</p>
-      
+     </div>
+
+     <div>
        <img src="https://media-exp1.licdn.com/dms/image/C5603AQHbjutz4kSvaw/profile-displayphoto-shrink_800_800/0/1619861612156?e=1659571200&v=beta&t=5wJHRL2bV3ftVfhXKqlJoWfelrGBmHV9WynI9N4qPck" 
        alt="A Picture of Anna Pham"
        width="200"
@@ -46,15 +48,19 @@
 
        <h3>About Me</h3>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias odio dignissimos ut eius dolor mollitia soluta debitis quo doloribus harum sequi tenetur animi culpa, pariatur dolore assumenda illo eos. Vero!</p>
-       <h3>My Projects</h3>
-       <ul>
-         <li>Project 1</li>
-         <li>Project 2</li>
-         <li>Project 3</li>
-       </ul>
+      
+       <div class="projects">
+        <h3 id="projects">My Projects</h3>
+        <img src="./images/coding-portfolio.jpeg" alt="A picture of coding text." class="projects" width=300 height=300/>
+        <ul class="projects">
+          <li class="=projects">Project 1</li>
+          <li class="=projects">Project 2</li>
+          <li class="=projects">Project 3</li>
+        </ul>
+      </div>
 
-       <h3>Contact Me</h3>
-       <p><b>Phone:</b> (202) 555-1234</p>
+       <h3 id="contact">Contact Me</h3>
+       <p id="contact"><b>Phone:</b> (202) 555-1234</p>
        <a href="mailto:fake@email.com"><b>Email: </b>fake@email.com</a>
       </div>
 </body>
