Added comments to index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+
+     <!-- header -->
      <div>
        <h1 id="header">ANNA PHAM</h1>
        <h2 id="header">Software Developer</h2>
@@ -40,15 +42,21 @@
        <p>My <i>favorite</i> thing about programming is that I can make cool websites, like this one!</p>
      </div>
 
+     
+     <!-- images -->
      <div>
        <img src="https://media-exp1.licdn.com/dms/image/C5603AQHbjutz4kSvaw/profile-displayphoto-shrink_800_800/0/1619861612156?e=1659571200&v=beta&t=5wJHRL2bV3ftVfhXKqlJoWfelrGBmHV9WynI9N4qPck" 
        alt="A Picture of Anna Pham"
        width="200"
        height="200"/>
 
+
+      <!-- About Me -->
        <h3>About Me</h3>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias odio dignissimos ut eius dolor mollitia soluta debitis quo doloribus harum sequi tenetur animi culpa, pariatur dolore assumenda illo eos. Vero!</p>
       
+
+      <!-- My Projects -->
        <div class="projects">
         <h3 id="projects">My Projects</h3>
         <img src="./images/coding-portfolio.jpeg" alt="A picture of coding text." class="projects" width=300 height=300/>
@@ -59,10 +67,12 @@
         </ul>
       </div>
 
+
+      <!-- Contact Me -->
        <h3 id="contact">Contact Me</h3>
        <p id="contact"><b>Phone:</b> (202) 555-1234</p>
        <a href="mailto:fake@email.com"><b>Email: </b>fake@email.com</a>
-      </div>
+    </div>
 </body>
 
 </html>
